<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/menu_main_item_search"
        app:showAsAction="always" />

    <item
        android:id="@+id/item_notif"
        android:icon="@drawable/ic_notifications_white_24dp"
        android:title="@string/menu_main_item_notif"
        app:showAsAction="always" />
    <item
        android:id="@+id/item_favourites"
        android:title="@string/menu_main_item_favourites" />
    <item
        android:id="@+id/item_setting"
        android:title="@string/menu_main_item_setting" />
    <item
        android:id="@+id/item_feedback"
        android:title="@string/menu_main_item_feedback" />
    <item
        android:id="@+id/item_about"
        android:title="@string/menu_main_item_about" />
</menu>