<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clipToPadding="false"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.geek.schoolmate.ui.activity.BlogCreateActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/spinnerSubject"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <Spinner
                        android:id="@+id/spinnerClass"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Marks" />

                        <EditText
                            android:id="@+id/editTextMarks"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Submission date" />

                        <EditText
                            android:id="@+id/editTextSubmissionDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:layout_marginBottom="@dimen/row_blog_inner_divider_top_bottom_margin"
                android:layout_marginTop="@dimen/row_blog_inner_divider_top_bottom_margin"
                android:background="@color/colorDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editTextTaskTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/act_task_create_edit_text_hint_title"
                    android:textAppearance="?android:textAppearanceSmall" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_height"
                    android:layout_marginBottom="@dimen/act_blog_create_blog_in_between_margin"
                    android:layout_marginTop="@dimen/act_blog_create_blog_in_between_margin"
                    android:background="@color/colorDivider" />

                <EditText
                    android:id="@+id/editTextTaskDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/act_task_create_edit_text_hint_desc"
                    android:inputType="textMultiLine"
                    android:textAppearance="?android:textAppearanceSmall" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/white"
        android:elevation="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/act_blog_create_blog_controls_wrapper_padding">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/act_blog_create_blog_in_between_margin"
                android:src="@drawable/ic_attach_file_black_24dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_insert_link_black_24dp" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/act_blog_create_blog_publish_btn_height"
            android:background="@drawable/bordered_button"
            android:text="@string/act_task_create_btn_create"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp" />
    </LinearLayout>
</RelativeLayout>